--- a/Source/DeepLearningFromScratch/nand_gate.ipynb
+++ b/Source/DeepLearningFromScratch/nand_gate.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "def AND(x1, x2):\n",
+    "def NAND(x1, x2):\n",
     "    x = np.array([x1, x2])\n",
     "    w = np.array([-0.5, -0.5])\n",
     "    b = 0.7 #b = - theta\n",
@@ -31,7 +31,7 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    for xs in [(0,0), (1, 0), (0,1), (1, 1)]:\n",
-    "        y = AND(xs[0], xs[1])\n",
+    "        y = NAND(xs[0], xs[1])\n",
     "        print(str(xs) + \"->\" + str(y))"
    ]
   },
