--- a/Source/Tensorflow/07-tf_PlaceHolder.ipynb
+++ b/Source/Tensorflow/07-tf_PlaceHolder.ipynb
@@ -2,38 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 0)->0\n",
-      "(1, 0)->1\n",
-      "(0, 1)->1\n",
-      "(1, 1)->1\n"
+      "8.0\n",
+      "end\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "def AND(x1, x2):\n",
-    "    x = np.array([x1, x2])\n",
-    "    w = np.array([0.5, 0.5])\n",
-    "    b = -0.2 #b = - theta\n",
-    "    tmp = np.sum(w*x) + b\n",
-    "    if tmp <= 0:\n",
-    "        return 0\n",
-    "    elif tmp >0:\n",
-    "        return 1\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    for xs in [(0,0), (1, 0), (0,1), (1, 1)]:\n",
-    "        y = AND(xs[0], xs[1])\n",
-    "        print(str(xs) + \"->\" + str(y))"
+    "import tensorflow as tf\n",
+    "data1 = tf.placeholder(tf.float32)\n",
+    "data2 = tf.placeholder(tf.float32)\n",
+    "dataAdd = tf.add(data1, data2)\n",
+    "with tf.Session() as sess:\n",
+    "    print(sess.run(dataAdd, feed_dict={data1:6, data2:2} )) #feed_dict={para 1:6, para 2:2}    \n",
+    "print(\"end\")    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
